# sedimentary_table_generator

./: LICENSE  README.md  setup.cfg
src/sedimentary_table_generator/: __init__.py
