[metadata]
name = sedimentary-table-generator
version = 0.0.1
author = Geode
description = Generate tables with Python!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Geode42/sedimentary_table_generator
project_urls =
    Bug Tracker = https://github.com/Geode42/sedimentary_table_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
